src/objects/Bargaining_Unit_SOSP__c.object
<CustomObject>
    <fields>
        <fullName>BU_Code__c</fullName>
        <label>BU Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Bargaining_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimated_Size__c</fullName>
        <label>Estimated Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Representation_End_Date__c</fullName>
        <label>Representation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Representation_Start_Date__c</fullName>
        <label>Representation Start Date</label>
        <type>Date</type>
    </fields>
    <label>Bargaining Unit</label>
    <nameField>
        <label>Bargaining Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bargaining Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>